# parsergens

./: .gitignore  Cargo.toml  README.md  TODO  flame-graph.html  test
cyk/: Cargo.toml
grammar/: Cargo.toml  build.rs
grammar/src/: ast.rs  grammar.lalrpop  grammar.rs  grammar_parser.rs  lex.rs  lexer.rs  lib.rs  main.rs
grammar/src/grammar/: lower.rs
grammar/src/grammar/snapshots/: grammar__grammar__lower__tests__lower_repetition.snap
grammar/src/grammar_parser/: ast.rs  grammar.lalrpop  lex.rs  regex.rs
grammar/src/grammar_parser/snapshots/: grammar__grammar_lex__tests__tokens.snap  grammar__grammar_parser__lex__tests__code_block.snap  grammar__grammar_parser__lex__tests__code_block_nested.snap  grammar__grammar_parser__lex__tests__layout_multiple.snap  grammar__grammar_parser__lex__tests__layout_nested.snap  grammar__grammar_parser__lex__tests__separator_toplevel.snap  grammar__grammar_parser__lex__tests__tokens.snap  grammar__grammar_parser__lex__tests__tokens.snap.new  grammar__grammar_parser__regex__tests__regex__alt_empty.snap  grammar__grammar_parser__regex__tests__regex__char_set_class.snap  grammar__grammar_parser__regex__tests__regex__char_set_escape.snap  grammar__grammar_parser__regex__tests__regex__char_set_hyphen.snap  grammar__grammar_parser__regex__tests__regex__char_set_mixed.snap  grammar__grammar_parser__regex__tests__regex__char_set_multi_range.snap  grammar__grammar_parser__regex__tests__regex__char_set_negated.snap  (+16 more)
grammar/src/lexer/: build.rs  dfa.rs  dfa_builder.rs  nfa.rs  nfa_builder.rs  powerset_cons.rs  subset_cons.rs  tabular_dfa.rs  tokens.rs  util.rs
grammar/src/snapshots/: grammar__lex__tests__tokens.snap  grammar__lexer__tests__lex_expr.snap  grammar__lexer__tests__match_longest.snap  grammar__lexer__tests__match_longest.snap.new  grammar__lexer__tests__skip.snap  grammar__tests__expr.snap  grammar__tests__expr.snap.new
lr/: Cargo.toml  flame-graph.html
lr/benches/: lalr.rs
lr/benches/fixtures/: ocaml.pg
lr/src/: augment.rs  build.rs  build_clr.rs  build_lalr.rs  builder.rs  clr.rs  codegen.rs  ffn.rs  first.rs  intmap.rs  lalr.rs  lib.rs  report.rs  slr.rs  token_set.rs
lr/src/builder/: compress.rs  states.rs  tables.rs
lr/src/codegen/: gen_lexer.rs  gen_parser.rs  gen_token_enum.rs
lr/src/slr/: build.rs
lr/src/snapshots/: lr__build__tests__epsilon_action_goto.snap  lr__build__tests__epsilon_states.snap  lr__build__tests__precedence_action_goto.snap  lr__build__tests__precedence_states.snap  lr__build__tests__simple_action_goto.snap  lr__build__tests__simple_states.snap  lr__build_clr__tests__simple_action_goto.snap  lr__build_clr__tests__simple_action_goto.snap.new  lr__build_clr__tests__simple_states.snap  lr__build_clr__tests__simple_states.snap.new  lr__build_lalr__tests__epsilon_action_goto.snap  lr__build_lalr__tests__epsilon_action_goto.snap.new  lr__build_lalr__tests__epsilon_states.snap  lr__build_lalr__tests__epsilon_states.snap.new  lr__build_lalr__tests__precedence_action_goto.snap  lr__build_lalr__tests__precedence_states.snap  lr__build_lalr__tests__precedence_states.snap.new  lr__build_lalr__tests__simple_action_goto.snap  lr__build_lalr__tests__simple_action_goto.snap.new  lr__build_lalr__tests__simple_states.snap  lr__build_lalr__tests__simple_states.snap.new  lr__build_lalr__tests__tiger_states.snap  lr__build_lalr__tests__tiger_states.snap.new  lr__build_lalr__tests__tttt.snap.new  lr__clr__tests__epsilon_action_goto.snap  lr__clr__tests__epsilon_states.snap  lr__clr__tests__simple_action_goto.snap  lr__clr__tests__simple_states.snap  lr__ffn__tests__ffn_ll_expr.snap  lr__ffn__tests__ffn_recursive.snap  lr__ffn__tests__ffn_simple.snap  lr__first__tests__ll_expr.snap  lr__first__tests__recursive.snap  lr__first__tests__simple.snap  lr__lalr__tests__epsilon_action_goto.snap  lr__lalr__tests__epsilon_states.snap  lr__lalr__tests__precedence_action_goto.snap  lr__lalr__tests__precedence_states.snap  lr__lalr__tests__precedence_tables.snap  lr__lalr__tests__simple_action_goto.snap  (+14 more)
lr/tests/: lalr.rs  slr.rs
lr/tests/parse/: mod.rs
lr/tests/snapshots/: lalr__nonassoc.snap  lalr__precedence.snap  lalr__repetition_failed.snap  lalr__repetition_succeed.snap  lalr__simple.snap  slr__precedence.snap
parsergens_proc_macro/: Cargo.toml  build.rs
parsergens_proc_macro/src/: gen_lexer.rs  lib.rs  parser_spec.rs  report.rs
parsergens_proc_macro/tests/: eval.rs  func.rs  lexer.rs  multi_entry_points.rs  state.rs
parsergens_proc_macro/tests/fixtures/: expr_eval.pg  expr_tokens.pg
parsergens_proc_macro/tests/snapshots/: eval__lalr.snap  func__lalr.snap  lexer__simple.snap  multi_entry_points__lalr-2.snap  multi_entry_points__lalr-3.snap  multi_entry_points__lalr.snap  state__lalr.snap
(+67 files in other folders)
