[package]
name = "parsergens"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
lr = { path = "lr" }
grammar = { path = "grammar" }
proc-macro-error = "1.0.4"
syn = { version = "1.0.41", features = ["extra-traits", "full"] }
quote = "1.0.7"
dunce = "1.0.1"
heck = "0.3.1"

[workspace]
members = [
  "grammar",
  "lr",
]
