[package]
name = "parsergens"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
lr = { path = "lr" }
grammar = { path = "grammar" }
proc-macro-error = "1.0.4"
syn = { version = "1.0.41", features = ["extra-traits", "full", "parsing"] }
dunce = "1.0.1"
heck = "0.3.1"
phf = "0.8.0"
pretty_assertions = "0.6.1"
itertools = "0.9.0"
regex = "1.3.9"
once_cell = "1.4.1"
quote = "1.0.7"
nanoid = "0.3.0"

[workspace]
members = [
  "grammar",
  "lr",
]

[dev-dependencies]
insta = "0.16.1"
