[package]
name = "grammar"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
bit-set = "0.5.2"
indexmap = "1.5.1"
bimap = "0.5.2"

[build-dependencies]
lalrpop = "0.19.0"

[dev-dependencies]
insta = "0.16.1"
pretty_assertions = "0.6.1"
