[package]
name = "grammar"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
indexmap = "1.5.1"
bimap = "0.5.2"
either = "1.6.0"
codespan-reporting = "0.9.5"
bitvec = "0.18.1"
debug_stub_derive = "0.3.0"
syn = { version = "1.0.41", features = ["full", "extra-traits", "parsing"] }
quote = "1.0.7"
proc-macro2 = "1.0.21"
fnv = "1.0.7"
bittyset = { git = "https://github.com/arucil/bittyset" }

[build-dependencies]
lalrpop = "0.19.0"

[dev-dependencies]
insta = "0.16.1"
pretty_assertions = "0.6.1"
