[package]
name = "lr"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammar = { path = "../grammar" }
bit-set = "0.5.2"
indexmap = "1.6.0"
bimap = "0.5.2"
bitvec = "0.19.0"
fnv = "1.0.7"

[dev-dependencies]
insta = "0.16.1"
