[package]
name = "lr"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammar = { path = "../grammar" }
indexmap = "1.6.0"
bimap = "0.5.2"
bitvec = "0.19.0"
fnv = "1.0.7"
bittyset = "0.1.0"
num-traits = "0.2.12"
itertools = "0.9.0"
heck = "0.3.1"
nanoid = "0.3.0"
codegen = { git = "https://github.com/arucil/codegen.git" }

[dev-dependencies]
insta = "0.16.1"
criterion = "0.3.3"
pretty_assertions = "0.6.1"

[[bench]]
name = "lalr"
harness = false
